Type:
Bug
Priority:
Major
Resolution:
Fixed
Affects Version/s:
10.4(EOL) , 10.5 , 10.6 , 10.7(EOL) , 10.8(EOL) , 10.9(EOL) , 10.10(EOL) , 10.11 , 11.0(EOL) , 11.1(EOL) , 11.2(EOL)
This test script:
DELIMITER $$;
--error ER_PARSE_ERROR
BEGIN NOT ATOMIC
DECLARE cur CURSOR (a INT ) FOR SELECT a+1;
OPEN cur(sp_followed_by_syntax_error();
CLOSE cur;
END ;
$$
DELIMITER ;$$
makes MTR complain about a memory leak:
Warning: 280 bytes lost at 0x7fe82800aba0, allocated by T@0 at mysys/array.c:72, mysys/hash.c:99, sql/sp.cc:2331, sql/sp.cc:2646, sql/item_create.cc:2631, sql/item_create.cc:2477, sql/sql_yacc.yy:10752, sql/sql_parse.cc:10456
Warning: 280 bytes lost at 0x7fe82800aba0, allocated by T@0 at mysys/array.c:72, mysys/hash.c:99, sql/sp.cc:2331, sql/sp.cc:2646, sql/item_create.cc:2631, sql/item_create.cc:2477, sql/sql_yacc.yy:10752, sql/sql_parse.cc:10456
This is a similar problem to MDEV-30680 , but the parse error happens in a different syntax context.
The problem happens in the 10.5 tree with MDEV-30680 already pushed.
relates to
MDEV-30680
Warning: Memory not freed: 280 on mangled query, LeakSanitizer: detected memory leaks
Closed
{"report":{"fcp":988.7999999523163,"ttfb":201,"pageVisibility":"visible","entityId":123097,"key":"jira.project.issue.view-issue","isInitial":true,"threshold":1000,"elementTimings":{},"userDeviceMemory":8,"userDeviceProcessors":64,"apdex":0.5,"journeyId":"5176cd80-677a-4573-8bfb-b9a13589b984","navigationType":0,"readyForUser":1066.5,"redirectCount":0,"resourceLoadedEnd":1324.8999999761581,"resourceLoadedStart":206.39999997615814,"resourceTiming":[{"duration":313.89999997615814,"initiatorType":"link","name":"https://jira.mariadb.org/s/2c21342762a6a02add1c328bed317ffd-CDN/lu2bu7/820016/12ta74/0a8bac35585be7fc6c9cc5a0464cd4cf/_/download/contextbatch/css/_super/batch.css","startTime":206.39999997615814,"connectEnd":0,"connectStart":0,"domainLookupEnd":0,"domainLookupStart":0,"fetchStart":206.39999997615814,"redirectEnd":0,"redirectStart":0,"requestStart":0,"responseEnd":520.2999999523163,"responseStart":0,"secureConnectionStart":0},{"duration":313.9000000357628,"initiatorType":"link","name":"https://jira.mariadb.org/s/7ebd35e77e471bc30ff0eba799ebc151-CDN/lu2bu7/820016/12ta74/8679b4946efa1a0bb029a3a22206fb5d/_/download/contextbatch/css/jira.browse.project,project.issue.navigator,jira.view.issue,jira.general,jira.global,atl.general,-_super/batch.css?agile_global_admin_condition=true&jag=true&jira.create.linked.issue=true&slack-enabled=true","startTime":206.5999999642372,"connectEnd":0,"connectStart":0,"domainLookupEnd":0,"domainLookupStart":0,"fetchStart":206.5999999642372,"redirectEnd":0,"redirectStart":0,"requestStart":0,"responseEnd":520.5,"responseStart":0,"secureConnectionStart":0},{"duration":322.80000001192093,"initiatorType":"script","name":"https://jira.mariadb.org/s/fbf975c0cce4b1abf04784eeae9ba1f4-CDN/lu2bu7/820016/12ta74/0a8bac35585be7fc6c9cc5a0464cd4cf/_/download/contextbatch/js/_super/batch.js?locale=en","startTime":206.89999997615814,"connectEnd":206.89999997615814,"connectStart":206.89999997615814,"domainLookupEnd":206.89999997615814,"domainLookupStart":206.89999997615814,"fetchStart":206.89999997615814,"redirectEnd":0,"redirectStart":0,"requestStart":206.89999997615814,"responseEnd":529.6999999880791,"responseStart":529.6999999880791,"secureConnectionStart":206.89999997615814},{"duration":368.30000001192093,"initiatorType":"script","name":"https://jira.mariadb.org/s/099b33461394b8015fc36c0a4b96e19f-CDN/lu2bu7/820016/12ta74/8679b4946efa1a0bb029a3a22206fb5d/_/download/contextbatch/js/jira.browse.project,project.issue.navigator,jira.view.issue,jira.general,jira.global,atl.general,-_super/batch.js?agile_global_admin_condition=true&jag=true&jira.create.linked.issue=true&locale=en&slack-enabled=true","startTime":207.0999999642372,"connectEnd":207.0999999642372,"connectStart":207.0999999642372,"domainLookupEnd":207.0999999642372,"domainLookupStart":207.0999999642372,"fetchStart":207.0999999642372,"redirectEnd":0,"redirectStart":0,"requestStart":207.0999999642372,"responseEnd":575.3999999761581,"responseStart":575.3999999761581,"secureConnectionStart":207.0999999642372},{"duration":371.80000001192093,"initiatorType":"script","name":"https://jira.mariadb.org/s/94c15bff32baef80f4096a08aceae8bc-CDN/lu2bu7/820016/12ta74/c92c0caa9a024ae85b0ebdbed7fb4bd7/_/download/contextbatch/js/atl.global,-_super/batch.js?locale=en","startTime":207.29999995231628,"connectEnd":207.29999995231628,"connectStart":207.29999995231628,"domainLookupEnd":207.29999995231628,"domainLookupStart":207.29999995231628,"fetchStart":207.29999995231628,"redirectEnd":0,"redirectStart":0,"requestStart":207.29999995231628,"responseEnd":579.0999999642372,"responseStart":579.0999999642372,"secureConnectionStart":207.29999995231628},{"duration":372.19999998807907,"initiatorType":"script","name":"https://jira.mariadb.org/s/d41d8cd98f00b204e9800998ecf8427e-CDN/lu2bu7/820016/12ta74/1.0/_/download/batch/jira.webresources:calendar-en/jira.webresources:calendar-en.js","startTime":207.39999997615814,"connectEnd":207.39999997615814,"connectStart":207.39999997615814,"domainLookupEnd":207.39999997615814,"domainLookupStart":207.39999997615814,"fetchStart":207.39999997615814,"redirectEnd":0,"redirectStart":0,"requestStart":207.39999997615814,"responseEnd":579.5999999642372,"responseStart":579.5999999642372,"secureConnectionStart":207.39999997615814},{"duration":372.4000000357628,"initiatorType":"script","name":"https://jira.mariadb.org/s/d41d8cd98f00b204e9800998ecf8427e-CDN/lu2bu7/820016/12ta74/1.0/_/download/batch/jira.webresources:calendar-localisation-moment/jira.webresources:calendar-localisation-moment.js","startTime":207.5999999642372,"connectEnd":207.5999999642372,"connectStart":207.5999999642372,"domainLookupEnd":207.5999999642372,"domainLookupStart":207.5999999642372,"fetchStart":207.5999999642372,"redirectEnd":0,"redirectStart":0,"requestStart":207.5999999642372,"responseEnd":580,"responseStart":580,"secureConnectionStart":207.5999999642372},{"duration":467,"initiatorType":"link","name":"https://jira.mariadb.org/s/b04b06a02d1959df322d9cded3aeecc1-CDN/lu2bu7/820016/12ta74/a2ff6aa845ffc9a1d22fe23d9ee791fc/_/download/contextbatch/css/jira.global.look-and-feel,-_super/batch.css","startTime":207.79999995231628,"connectEnd":0,"connectStart":0,"domainLookupEnd":0,"domainLookupStart":0,"fetchStart":207.79999995231628,"redirectEnd":0,"redirectStart":0,"requestStart":0,"responseEnd":674.7999999523163,"responseStart":0,"secureConnectionStart":0},{"duration":372.5999999642372,"initiatorType":"script","name":"https://jira.mariadb.org/rest/api/1.0/shortcuts/820016/47140b6e0a9bc2e4913da06536125810/shortcuts.js?context=issuenavigation&context=issueaction","startTime":208,"connectEnd":208,"connectStart":208,"domainLookupEnd":208,"domainLookupStart":208,"fetchStart":208,"redirectEnd":0,"redirectStart":0,"requestStart":208,"responseEnd":580.5999999642372,"responseStart":580.5999999642372,"secureConnectionStart":208},{"duration":466.80000001192093,"initiatorType":"link","name":"https://jira.mariadb.org/s/3ac36323ba5e4eb0af2aa7ac7211b4bb-CDN/lu2bu7/820016/12ta74/d176f0986478cc64f24226b3d20c140d/_/download/contextbatch/css/com.atlassian.jira.projects.sidebar.init,-_super,-project.issue.navigator,-jira.view.issue/batch.css?jira.create.linked.issue=true","startTime":208.0999999642372,"connectEnd":0,"connectStart":0,"domainLookupEnd":0,"domainLookupStart":0,"fetchStart":208.0999999642372,"redirectEnd":0,"redirectStart":0,"requestStart":0,"responseEnd":674.8999999761581,"responseStart":0,"secureConnectionStart":0},{"duration":372.9000000357628,"initiatorType":"script","name":"https://jira.mariadb.org/s/3339d87fa2538a859872f2df449bf8d0-CDN/lu2bu7/820016/12ta74/d176f0986478cc64f24226b3d20c140d/_/download/contextbatch/js/com.atlassian.jira.projects.sidebar.init,-_super,-project.issue.navigator,-jira.view.issue/batch.js?jira.create.linked.issue=true&locale=en","startTime":208.29999995231628,"connectEnd":208.29999995231628,"connectStart":208.29999995231628,"domainLookupEnd":208.29999995231628,"domainLookupStart":208.29999995231628,"fetchStart":208.29999995231628,"redirectEnd":0,"redirectStart":0,"requestStart":208.29999995231628,"responseEnd":581.1999999880791,"responseStart":581.1999999880791,"secureConnectionStart":208.29999995231628},{"duration":610.1999999880791,"initiatorType":"script","name":"https://jira.mariadb.org/s/d41d8cd98f00b204e9800998ecf8427e-CDN/lu2bu7/820016/12ta74/1.0/_/download/batch/jira.webresources:bigpipe-js/jira.webresources:bigpipe-js.js","startTime":209.0999999642372,"connectEnd":209.0999999642372,"connectStart":209.0999999642372,"domainLookupEnd":209.0999999642372,"domainLookupStart":209.0999999642372,"fetchStart":209.0999999642372,"redirectEnd":0,"redirectStart":0,"requestStart":209.0999999642372,"responseEnd":819.2999999523163,"responseStart":819.2999999523163,"secureConnectionStart":209.0999999642372},{"duration":1115,"initiatorType":"script","name":"https://jira.mariadb.org/s/d41d8cd98f00b204e9800998ecf8427e-CDN/lu2bu7/820016/12ta74/1.0/_/download/batch/jira.webresources:bigpipe-init/jira.webresources:bigpipe-init.js","startTime":209.19999998807907,"connectEnd":209.19999998807907,"connectStart":209.19999998807907,"domainLookupEnd":209.19999998807907,"domainLookupStart":209.19999998807907,"fetchStart":209.19999998807907,"redirectEnd":0,"redirectStart":0,"requestStart":209.19999998807907,"responseEnd":1324.199999988079,"responseStart":1324.199999988079,"secureConnectionStart":209.19999998807907},{"duration":134.30000001192093,"initiatorType":"xmlhttprequest","name":"https://jira.mariadb.org/rest/webResources/1.0/resources","startTime":686.7999999523163,"connectEnd":686.7999999523163,"connectStart":686.7999999523163,"domainLookupEnd":686.7999999523163,"domainLookupStart":686.7999999523163,"fetchStart":686.7999999523163,"redirectEnd":0,"redirectStart":0,"requestStart":686.7999999523163,"responseEnd":821.0999999642372,"responseStart":821.0999999642372,"secureConnectionStart":686.7999999523163},{"duration":378.19999998807907,"initiatorType":"script","name":"https://jira.mariadb.org/s/d41d8cd98f00b204e9800998ecf8427e-CDN/lu2bu7/820016/12ta74/e65b778d185daf5aee24936755b43da6/_/download/contextbatch/js/browser-metrics-plugin.contrib,-_super,-project.issue.navigator,-jira.view.issue,-atl.general/batch.js?agile_global_admin_condition=true&jag=true&jira.create.linked.issue=true&slack-enabled=true","startTime":946.6999999880791,"connectEnd":946.6999999880791,"connectStart":946.6999999880791,"domainLookupEnd":946.6999999880791,"domainLookupStart":946.6999999880791,"fetchStart":946.6999999880791,"redirectEnd":0,"redirectStart":0,"requestStart":946.6999999880791,"responseEnd":1324.8999999761581,"responseStart":1324.8999999761581,"secureConnectionStart":946.6999999880791}],"fetchStart":0,"domainLookupStart":0,"domainLookupEnd":0,"connectStart":0,"connectEnd":0,"requestStart":38,"responseStart":201,"responseEnd":204,"domLoading":204,"domInteractive":1349,"domContentLoadedEventStart":1349,"domContentLoadedEventEnd":1387,"domComplete":2198,"loadEventStart":2198,"loadEventEnd":2199,"userAgent":"Mozilla/5.0 AppleWebKit/537.36 (KHTML, like Gecko; compatible; ClaudeBot/1.0; +claudebot@anthropic.com)","marks":[{"name":"bigPipe.sidebar-id.start","time":1329.0999999642372},{"name":"bigPipe.sidebar-id.end","time":1329.8999999761581},{"name":"bigPipe.activity-panel-pipe-id.start","time":1330.0999999642372},{"name":"bigPipe.activity-panel-pipe-id.end","time":1332.3999999761581},{"name":"activityTabFullyLoaded","time":1392.7999999523163}],"measures":[],"correlationId":"dff2dbe643ebc8","effectiveType":"4g","downlink":10,"rtt":0,"serverDuration":100,"dbReadsTimeInMs":12,"dbConnsTimeInMs":20,"applicationHash":"9d11dbea5f4be3d4cc21f03a88dd11d8c8687422","experiments":[]}}