A cleanup for MDEV-31578 DECLARE CURSOR: "Memory not freed: 280 bytes lost" on syntax error

Removing the method LEX::delete_if_not_sp_lex_in_use().
It was not really used.