sql/sql_lex.h
@@ -3429,11 +3429,7 @@ public:
   sp_head *sphead;
   sp_name *spname;
   bool sp_lex_in_use;   // Keep track on lex usage in SPs for error handling
-  void delete_if_not_sp_lex_in_use()
-  {
-    if (!sp_lex_in_use)
-      delete this;
-  }
+
   sp_pcontext *spcont;
 
   st_sp_chistics sp_chistics;
